--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
         "start": "magsdk",
         "build": "magsdk build",
         "watch": "magsdk watch",
-        "serve": "magsdk serve"
+        "serve": "magsdk serve",
+        "sass": "node-sass --indent-width 4 --include-path ../../.. sass/develop.480.scss css/develop.480.css && node-sass --indent-width 4 --include-path ../../.. sass/release.480.scss css/release.480.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.576.scss css/develop.576.css && node-sass --indent-width 4 --include-path ../../.. sass/release.576.scss css/release.576.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.720.scss css/develop.720.css && node-sass --indent-width 4 --include-path ../../.. sass/release.720.scss css/release.720.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.1080.scss css/develop.1080.css && node-sass --indent-width 4 --include-path ../../.. sass/release.1080.scss css/release.1080.css"
     },
     "dependencies": {
-        "mag-app": "git+ssh://git@192.168.1.222:/web/magsdk/app.git",
+        "mag-app": "magsdk/app",
         "stb-rc": "stbsdk/rc",
         "stb-component-page": "stbsdk/component-page"
     },
