--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "stb-boilerplate",
+    "name": "mag-boilerplate",
     "version": "1.0.0",
     "description": "Application template.",
     "author": {
@@ -14,7 +14,8 @@
         "start": "magsdk",
         "build": "magsdk build",
         "watch": "magsdk watch",
-        "serve": "magsdk serve"
+        "serve": "magsdk serve",
+        "sass": "node-sass --indent-width 4 --include-path ../../.. sass/develop.480.scss css/develop.480.css && node-sass --indent-width 4 --include-path ../../.. sass/release.480.scss css/release.480.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.576.scss css/develop.576.css && node-sass --indent-width 4 --include-path ../../.. sass/release.576.scss css/release.576.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.720.scss css/develop.720.css && node-sass --indent-width 4 --include-path ../../.. sass/release.720.scss css/release.720.css && node-sass --indent-width 4 --include-path ../../.. sass/develop.1080.scss css/develop.1080.css && node-sass --indent-width 4 --include-path ../../.. sass/release.1080.scss css/release.1080.css"
     },
     "dependencies": {
         "mag-app": "magsdk/app",
