--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
         "eslint": "3.*.*",
         "mag-app": "magsdk/app",
         "mag-eslint-config": "magsdk/eslint-config",
-        "stb-component-page": "stbsdk/component-page",
-        "stb-rc": "stbsdk/rc"
+        "stb-component-page": "stbsdk/component-page"
     },
     "license": "MIT"
 }
