--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dependencies": {},
     "devDependencies": {
         "eslint": "3.*.*",
-        "mag-app": "magsdk/app",
+        "mag-app": "1.*.*",
         "mag-eslint-config": "1.*.*",
         "stb-component-page": "1.*.*",
         "spa-gettext": "1.*.*"
