--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     },
     "dependencies": {},
     "devDependencies": {
-        "eslint": "4.*.*",
         "mag-app": "^1.0.1",
         "mag-component-footer": "2.*.*",
         "mag-component-layout-list": "^1.0.1",
         "mag-component-modal": "^1.0.1",
         "mag-component-panel": "^1.0.1",
         "mag-component-panel-set": "1.*.*",
-        "mag-eslint-config": "1.*.*",
+        "mag-eslint": "^1.0.0",
         "stb-component-page": "^1.4.0",
         "stb-keys": "^1.4.0",
         "spa-dom": "1.*.*",
