--- a/package.json
+++ b/package.json
@@ -12,25 +12,81 @@
     },
     "scripts": {
         "start": "magsdk",
+        "debug": "DEBUG=* magsdk",
         "build": "magsdk build",
         "watch": "magsdk watch",
         "serve": "magsdk serve",
         "lint": "eslint .",
         "test": "npm run lint"
     },
-    "dependencies": {},
+    "dependencies": {
+        "magcore-core": "^3.7.35",
+        "magcore-theme": "^1.4.1"
+    },
     "devDependencies": {
+        "mag-component-scroll-area": "^1.0.3",
+        "stb-component-scrollbar": "^1.0.0",
+        "mag-component-check-list": "^1.3.0",
+        "mag-component-modal-check-list": "^2.0.1",
+        "mag-component-layout": "^1.0.1",
+        "mag-component-radio-list": "^2.3.0",
         "mag-app": "^1.0.1",
         "mag-component-footer": "2.*.*",
         "mag-component-layout-list": "^1.0.1",
         "mag-component-modal": "^1.0.1",
         "mag-component-panel": "^1.0.1",
         "mag-component-panel-set": "1.*.*",
-        "mag-eslint": "^1.0.0",
+        "cjs-eslint": "^1.0.0",
+        "mag-eslint-config": "^1.0.0",
         "stb-component-page": "^1.4.0",
         "stb-keys": "^1.4.0",
         "spa-dom": "1.*.*",
         "spa-gettext": "1.*.*"
+    },
+    "optionalDependencies": {
+        "magcore-app-player": "^3.7.0",
+        "magcore-osd-keyboard": "^2.0.0"
+    },
+    "config": {
+        "name": "Boilerplate",
+        "description": "Boilerplate for magsdk.",
+        "type": "app",
+        "category": "media",
+        "uris": {
+            "app": "app",
+            "entry": "index.html",
+            "icons": {
+                "480": {
+                    "logoNormal": "img/480/normal.png",
+                    "logoActive": "img/480/active.png",
+                    "leanbackLogoNormal": "img/480/leanback-normal.png",
+                    "leanbackLogoActive": "img/480/leanback-active.png"
+                },
+                "576": {
+                    "logoNormal": "img/576/normal.png",
+                    "logoActive": "img/576/active.png",
+                    "leanbackLogoNormal": "img/576/leanback-normal.png",
+                    "leanbackLogoActive": "img/576/leanback-active.png"
+                },
+                "720": {
+                    "logoNormal": "img/720/normal.png",
+                    "logoActive": "img/720/active.png",
+                    "leanbackLogoNormal": "img/720/leanback-normal.png",
+                    "leanbackLogoActive": "img/720/leanback-active.png"
+                },
+                "1080": {
+                    "logoNormal": "img/1080/normal.png",
+                    "logoActive": "img/1080/active.png",
+                    "leanbackLogoNormal": "img/1080/leanback-normal.png",
+                    "leanbackLogoActive": "img/1080/leanback-active.png"
+                }
+            }
+        },
+        "colors": {
+            "splashFont": "#fff",
+            "splashBackground": "#3cbb3c"
+        },
+        "resource": "audio"
     },
     "license": "MIT"
 }
