rework package.json
* add scripts for all platforms
* switch to external global dependencies
* move some dependencies and config section to manifest.json

--- a/package.json
+++ b/package.json
@@ -11,17 +11,43 @@
         "url": "https://github.com/magsdk/boilerplate.git"
     },
     "scripts": {
-        "runner": "runner",
-        "tizen": "PLATFORM=TIZEN npm run runner",
-        "webos": "PLATFORM=WEBOS npm run runner",
         "lint": "eslint .",
-        "test": "npm run lint"
+        "lint:fix": "eslint --fix .",
+        "test": "npm run lint",
+
+        "mocha": "../../node_modules/.bin/mocha",
+        "runner": "../../node_modules/.bin/runner",
+
+        "android-app": "PLATFORM=ANDROID-APP npm run runner",
+        "android-app:build": "npm run android-app build",
+        "android-app:develop": "DEVELOP=true npm run android-app",
+
+        "android-stb": "PLATFORM=ANDROID-STB npm run runner",
+        "android-stb:build": "npm run android-stb build",
+        "android-stb:develop": "DEVELOP=true npm run android-stb",
+
+        "smarttv": "PLATFORM=SMARTTV npm run runner",
+        "smarttv:build": "npm run smarttv build",
+        "smarttv:develop": "DEVELOP=true npm run smarttv",
+
+        "mag": "PLATFORM=MAG npm run runner",
+        "mag:build": "npm run mag build",
+        "mag:develop": "DEVELOP=true npm run mag",
+
+        "tizen": "PLATFORM=TIZEN npm run runner",
+        "tizen:build": "npm run tizen build",
+        "tizen:develop": "DEVELOP=true npm run tizen",
+
+        "webos": "PLATFORM=WEBOS npm run runner",
+        "webos:build": "npm run webos build",
+        "webos:develop": "DEVELOP=true npm run webos",
+
+        "build": "npm run android-app build & npm run android-stb build & npm run smarttv build & npm run mag build & npm run tizen build & npm run webos build",
+        "build:develop": "npm run android-app:develop build & npm run android-stb:develop build & npm run smarttv:develop build & npm run mag:develop build & npm run tizen:develop build & npm run webos:develop build",
+
+        "start": "npm run mag:develop"
     },
     "dependencies": {
-        "magcore-core": "^3.7.86",
-        "magcore-theme": "^1.4.1"
-    },
-    "devDependencies": {
         "mag-app": "^2.0.0",
         "mag-component-check-list": "^1.3.0",
         "mag-component-footer": "^2.0.9",
@@ -33,57 +59,11 @@
         "mag-component-panel-set": "^1.0.4",
         "mag-component-radio-list": "^2.3.0",
         "mag-component-scroll-area": "^1.0.3",
-        "mag-eslint": "^1.0.1",
-        "mag-runner": "github:magsdk/runner",
         "spa-dom": "^1.4.1",
         "spa-gettext": "^1.4.1",
         "stb-component-page": "^1.4.1",
         "stb-component-scrollbar": "^1.0.0",
         "stb-keys": "^1.4.4"
-    },
-    "optionalDependencies": {
-        "magcore-app-player": "^3.7.0",
-        "magcore-osd-keyboard": "^2.0.0"
-    },
-    "config": {
-        "name": "Boilerplate",
-        "description": "Boilerplate for magsdk.",
-        "type": "app",
-        "category": "media",
-        "uris": {
-            "app": "app",
-            "entry": "index.html",
-            "icons": {
-                "480": {
-                    "logoNormal": "img/480/normal.png",
-                    "logoActive": "img/480/active.png",
-                    "primeLogoNormal": "img/480/prime-normal.png",
-                    "primeLogoActive": "img/480/prime-active.png"
-                },
-                "576": {
-                    "logoNormal": "img/576/normal.png",
-                    "logoActive": "img/576/active.png",
-                    "primeLogoNormal": "img/576/prime-normal.png",
-                    "primeLogoActive": "img/576/prime-active.png"
-                },
-                "720": {
-                    "logoNormal": "img/720/normal.png",
-                    "logoActive": "img/720/active.png",
-                    "primeLogoNormal": "img/720/prime-normal.png",
-                    "primeLogoActive": "img/720/prime-active.png"
-                },
-                "1080": {
-                    "logoNormal": "img/1080/normal.png",
-                    "logoActive": "img/1080/active.png",
-                    "primeLogoNormal": "img/1080/prime-normal.png",
-                    "primeLogoActive": "img/1080/prime-active.png"
-                }
-            }
-        },
-        "colors": {
-            "splashFont": "#fff",
-            "splashBackground": "#3cbb3c"
-        }
     },
     "license": "MIT"
 }
