--- a/package.json
+++ b/package.json
@@ -17,27 +17,27 @@
 
         "android-app": "PLATFORM=ANDROIDAPP npm run runner",
         "android-app:build": "npm run android-app build",
-        "android-app:develop": "DEVELOP=true npm run android-app",
+        "android-app:develop": "DEVELOP=true npm run android-app develop",
 
         "android-stb": "PLATFORM=ANDROIDSTB npm run runner",
         "android-stb:build": "npm run android-stb build",
-        "android-stb:develop": "DEVELOP=true npm run android-stb",
+        "android-stb:develop": "DEVELOP=true npm run android-stb develop",
 
         "smarttv": "PLATFORM=SMARTTV npm run runner",
         "smarttv:build": "npm run smarttv build",
-        "smarttv:develop": "DEVELOP=true npm run smarttv",
+        "smarttv:develop": "DEVELOP=true npm run smarttv develop",
 
         "mag": "PLATFORM=MAG npm run runner",
         "mag:build": "npm run mag build",
-        "mag:develop": "DEVELOP=true npm run mag",
+        "mag:develop": "DEVELOP=true npm run mag develop",
 
         "tizen": "PLATFORM=TIZEN npm run runner",
         "tizen:build": "npm run tizen build",
-        "tizen:develop": "DEVELOP=true npm run tizen",
+        "tizen:develop": "DEVELOP=true npm run tizen develop",
 
         "webos": "PLATFORM=WEBOS npm run runner",
         "webos:build": "npm run webos build",
-        "webos:develop": "DEVELOP=true npm run webos",
+        "webos:develop": "DEVELOP=true npm run webos develop",
 
         "build": "npm run android-app build & npm run android-stb build & npm run smarttv build & npm run mag build & npm run tizen build & npm run webos build",
         "build:develop": "npm run android-app:develop build & npm run android-stb:develop build & npm run smarttv:develop build & npm run mag:develop build & npm run tizen:develop build & npm run webos:develop build",
